[package]
name = "blip"
version = "0.1.0"
authors = ["Derrick van Zyl <derrick.vanzyl@gmail.com>"]
edition = "2018"


[lib]
name = "blip"
path = "src/lib.rs"


[dependencies]
log = "0.4"
env_logger = "0.7.1"
bitflags = "1.2.1"
glad-gl = { path = "../lib/glad-gl" }


[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"